# hft_trading_system

./: .dockerignore  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
ansible/: deploy.yml
docker/: Dockerfile  docker-compose.yml
grafana/: grafana-provisioning.yml
include/: common.h
include/backtesting/: backtester.h  historical_data_loader.h
include/config/: settings.h
include/data_processing/: data_processor.h
include/order_execution/: exchange_connector.h  order_executor.h
include/risk_management/: risk_manager.h  risk_strategy.h
include/security_module/: hash_utils.h  key_manager.h  security.h
include/strategies/: mean_reversion_strategy.h  scalping_strategy.h  strategy_manager.h
include/ui/: ui_manager.h
kubernetes/: deployment.yaml  service.yaml
prometheus/: prometheus.yml
scripts/: build.sh  deploy.sh  run_tests.sh
src/: main.cpp
src/backtesting/: CMakeLists.txt  backtester.cpp  backtester.h  historical_data_loader.cpp  historical_data_loader.h
src/data_processing/: CMakeLists.txt  data_collector.cpp  data_collector.h  data_processor.cpp  data_processor.h
src/logging_monitoring/: CMakeLists.txt  logger.cpp  logger.h  monitor.cpp  monitor.h
src/order_execution/: CMakeLists.txt  exchange_connector.cpp  exchange_connector.h  order_executor.cpp  order_executor.h
src/risk_management/: CMakeLists.txt  exposure_limit_risk_strategy.cpp  exposure_limit_risk_strategy.h  max_drawdown_risk_strategy.cpp  max_drawdown_risk_strategy.h  risk_manager.cpp  risk_manager.h  risk_strategy.cpp  risk_strategy.h
src/security_module/: CMakeLists.txt  hash_utils.cpp  key_manager.cpp  security.cpp
src/security_module/doc/: README.md  SECURITY_ARCHITECTURE.md
src/security_module/scripts/: key_rotation.sh
src/strategies/: CMakeLists.txt  base_strategy.cpp  base_strategy.h  mean_reversion_strategy.cpp  mean_reversion_strategy.h  scalping_strategy.cpp  scalping_strategy.h  strategy_manager.cpp  strategy_manager.h
src/ui/: CMakeLists.txt  ui_manager.cpp  ui_manager.h
terraform/: main.tf  outputs.tf  variables.tf
tests/: CMakeLists.txt
tests/backtesting/: test_backtester.cpp
tests/data_processing/: test_data_processor.cpp
tests/logging_monitoring/: test_logger.cpp
tests/order_execution/: test_order_executor.cpp
tests/risk_management/: test_risk_manager.cpp
tests/security_module/: test_hash_utils.cpp  test_key_manager.cpp  test_security.cpp
tests/strategies/: test_scalping_strategy.cpp
tests/ui/: test_ui_manager.cpp
